# TTS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_script.txt  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup_zoom_integration.py  start_meeting_mode.bat  test_vb_cable_integration.py
.github/workflows/: ci.yml  release.yml
config/: __init__.py  config.yaml  config_manager.py
core/: __init__.py  audio_processor.py  text_processor.py  tts_engine.py  vb_cable_interface.py  virtual_audio.py
docs/: INSTALLATION_GUIDE.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  ZOOM_INTEGRATION_GUIDE.md  architecture_design.md  project_task_breakdown.md  task_tracker.md  testing_strategy.md
interfaces/: __init__.py  api_interface.py  cli_interface.py  gui_interface.py
plugins/: __init__.py
plugins/audio/: __init__.py
plugins/tts/: __init__.py  demo_tts_plugin.py  sesame_csm_plugin.py
scripts/: __init__.py  background_downloader.py  download_models.py  generate_test_audio.py  setup_dev.py
templates/: meeting_closings.txt  meeting_greetings.txt  meeting_responses.txt
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_text_processor.py
utils/: __init__.py  device_manager.py  error_handler.py  logger.py
virtual_audio/: __init__.py
